Fix contrast

--- a/src/styles/shared/cookies.scss
+++ b/src/styles/shared/cookies.scss
@@ -64,6 +64,9 @@
       font-size: 1rem;
     }
   }
+  .gdpr__link {
+    text-shadow: 0 0 1rem rgba(0, 0, 0, 0.6667);
+  }
   // .gdpr__disclaimer {
   //   margin-right: 0.5rem;
   // }
